devops/iac/local/k8s/2-example-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginxapp1-ingress-service
spec:
  ingressClassName: nginx
  rules:
   - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-clusterip-service
                port:
                  number: 80
